--- a/web/html_components/admin/products.html
+++ b/web/html_components/admin/products.html
@@ -13,7 +13,7 @@
             </div>
             <div class="row">
                 <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 form-group">
-                    <a (click)="selectProduct($event, product.id)"><img class="img-responsive image80x50" src="resources/images/product/{{product.img ? product.img : 'a.jpg'}}" alt="Product Img"></a>
+                    <a (click)="selectProduct($event, product.id)"><img class="img-responsive image80x50" src="resources/images/product/{{product.img ? product.img : 'a.jpg'}}" alt="Property Image"></a>
                 </div>
                 <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 form-group">
                     <div class="row form-group">
