--- a/web/html_components/public/product.html
+++ b/web/html_components/public/product.html
@@ -98,7 +98,7 @@
                 </div>
                 <div class="row" *ngIf="productInfo?.user?.agentLogo != null">
                      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                        <img class="img-responsive" src="resources/images/profile/logo/100_100/{{productInfo?.user?.agentLogo}}">
+                        <img class="img-responsive" src="resources/images/profile/logo/100_100/{{productInfo?.user?.agentLogo}}" alt="Agent Logo">
                     </div>
                 </div>
                 <div class="row" *ngIf="productInfo?.companyName != null">
