--- a/web/html_components/member/featuredad/individualadbids.html
+++ b/web/html_components/member/featuredad/individualadbids.html
@@ -63,7 +63,7 @@
                             </div>
                         </div>
                         <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 form-group">
-                            <span>{{product.title}}</span>
+                            <div class="individual-ad-bids-product-title">{{product.title}}</div>
                         </div>
                         <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2  form-group">
                             <span>{{product?.location?.postCode}}</span>
