--- a/web/html_components/public/search.html
+++ b/web/html_components/public/search.html
@@ -175,10 +175,10 @@
                                             <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
                                                 <div class="row">
                                                     <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
-                                                        <a (click)="selectProduct($event, product.id)"><img class="img-responsive list-property-big-img" src="resources/images/product/328_212/{{product.img}}"></a>
+                                                        <a (click)="selectProduct($event, product.id)"><img class="img-responsive list-property-big-img" src="resources/images/product/328_212/{{product.img}}" alt="Property Image"></a>
                                                     </div>
                                                     <div *ngFor="let image of product.images" class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-                                                        <a (click)="selectProduct($event, product.id)"><img class="img-responsive list-property-small-img" src="resources/images/product/328_212/{{image.title}}"></a>
+                                                        <a (click)="selectProduct($event, product.id)"><img class="img-responsive list-property-small-img" src="resources/images/product/328_212/{{image.title}}" alt="Property Image"></a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -237,7 +237,7 @@
                                 <div *ngFor="let product of productList" class="col-xs-12 col-sm-6 col-md-4 col-lg-4 form-group">
                                     <div class="grid-property-section">
                                         <div class="grid-property-img">
-                                            <a (click)="selectProduct($event, product.id)"><img class="img-responsive" src="resources/images/product/328_212/{{product.img}}"></a>
+                                            <a (click)="selectProduct($event, product.id)"><img class="img-responsive" src="resources/images/product/328_212/{{product.img}}" alt="Property Image"></a>
                                         </div>
                                         <div class="grid-property-price">
                                             <h3>{{product.basePrice}}  £</h3>
