--- a/web/html_components/public/product.html
+++ b/web/html_components/public/product.html
@@ -136,11 +136,11 @@
         <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
             <div class="product-info-details-right-panel form-group">
                 <div class="row">
-                    <div class="col-xs-12 col-sm-12 col-md-10 col-lg-10">
+                    <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
                         <h1 class="product-info-details-right-panel-product-title">{{productInfo.title}}</h1>
                     </div>
-                    <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
-                        <h1 class="product-info-details-right-panel-product-price">£{{productInfo?.basePrice}}</h1>
+                    <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+                        <h1 class="product-info-details-right-panel-product-price">Guide Price {{productInfo?.basePrice}} £</h1>
                     </div>
                 </div>
                 <div class="row form-group">
